rds.tf
provider "aws" {
  region = var.region
}

data "aws_availability_zones" "available" {}

module "vpc" {
  source               = "terraform-aws-modules/vpc/aws"
  version              = "2.77.0"
  name                 = "tech-challenge-fiap-fase3"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_db_subnet_group" "tech-challenge" {
  name       = "tech-challenge-fiap-fase3"
  subnet_ids = module.vpc.public_subnets

  tags = {
    Name = "Tech Challenge Fase 3"
  }
}

resource "aws_security_group" "rds" {
  name   = "tech_challenge_fiap_fase3_rds"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tech-challenge-fiap-fase3-rds"
  }
}

resource "aws_db_parameter_group" "tech-challenge" {
  name   = "tech-challenge-fiap-fase3"
  family = "postgres14"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "tech-challenge" {
  identifier             = "tech-challenge-fiap-fase3"
  instance_class         = "db.t3.micro"
  allocated_storage      = 20
  engine                 = "postgres"
  engine_version         = 14.9
  username               = "postgres"
  password               = "postgres"
  db_subnet_group_name   = aws_db_subnet_group.tech-challenge.name
  vpc_security_group_ids = [aws_security_group.rds.id]
  parameter_group_name   = aws_db_parameter_group.tech-challenge.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}
